tests/07-duplicate.stderr
error: field `position` already declared
 --> tests/07-duplicate.rs:6:14
  |
6 |     #[scalar(position : f32)]
  |              ^^^^^^^^
